# qif-to-qfx

./: README.md  SKILL.md  pyproject.toml  qif_to_qfx.py
.claude-plugin/: marketplace.json  plugin.json
tests/: test_chase_parsing.py  test_dates_and_cli.py  test_investment_reject.py  test_section_skip.py
tests/fixtures/: chase_ccard.qif  fidelity_investment.qif
